--- a/_config.yml
+++ b/_config.yml
@@ -115,7 +115,7 @@ disqus:
 
 #################################### global configure #######################################
 
-username: minixalpha
+username: nanfu
 baseurl: /StrayBirds
 markdown: redcarpet
 safe: false
